app/backend-web-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  template:
    metadata:
      name: web
      labels:
        name: web
        app: demo
        env: staging
    spec:
      containers:
      - name: web
        image: janakiramm/web
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
