app/db-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: redis
  labels:
    name: redis
    app: demo
    env: staging
spec:
  containers:
    - name: redis
      image: redis:latest
      ports:
        - containerPort: 6379
          protocol: TCP
