app/web-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: web
  labels:
    name: web
    app: demo
    env: staging
spec:
  containers:
    - name: web
      image: janakiramm/web
      ports:
        - containerPort: 5000
          name: http
          protocol: TCP
