app/backend-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: web
    app: demo
    env: staging
