app/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
    app: demo
    env: staging
spec:
  ports:
  - port: 6379
    name: redis
    targetPort: 6379
  selector:
    name: redis
    app: demo
    env: staging
